--- a/src/components/ToolCard/ToolCard.css
+++ b/src/components/ToolCard/ToolCard.css
@@ -2,7 +2,7 @@
   width: 350px;
   height: 380px;
   margin: 1rem;
-  border: 1px solid black;
+  border: 1px solid rgb(36, 187, 86);
   border-radius: 5px;
   box-shadow: 1px 1px 1px 1px;
   display: flex;
