--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -1,8 +1,9 @@
 /* Estilo para el contenedor de las herramientas */
 .tools {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
+  display: flex;
+  column-gap: 40px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* Estilo para el mensaje cuando no hay herramientas disponibles */
@@ -10,6 +11,15 @@
   font-size: 16px;
   text-align: center;
   margin-top: 20px;
+}
+.tools h1 {
+  text-align: center;
+}
+
+.tools img {
+  display: flex;
+  width: 70px;
+  height: 70px;
 }
 
 /* Estilo para los filtros (opcional) */
